fix for print in issue 1

--- a/AAA._Python._Decorators_MyWork.ipynb
+++ b/AAA._Python._Decorators_MyWork.ipynb
@@ -16,8 +16,8 @@
    "id": "2c2dc3b0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T20:43:49.909103Z",
-     "start_time": "2022-11-20T20:43:49.880304Z"
+     "end_time": "2022-11-21T21:29:53.654247Z",
+     "start_time": "2022-11-21T21:29:53.634373Z"
     }
    },
    "outputs": [
@@ -62,8 +62,8 @@
    "id": "0ce62055",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T20:43:51.492512Z",
-     "start_time": "2022-11-20T20:43:51.486884Z"
+     "end_time": "2022-11-21T21:29:54.398038Z",
+     "start_time": "2022-11-21T21:29:54.390663Z"
     }
    },
    "outputs": [],
@@ -77,8 +77,8 @@
    "id": "302f574f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T20:43:51.923894Z",
-     "start_time": "2022-11-20T20:43:51.917277Z"
+     "end_time": "2022-11-21T21:29:55.057784Z",
+     "start_time": "2022-11-21T21:29:55.049934Z"
     }
    },
    "outputs": [
@@ -103,8 +103,8 @@
    "id": "d08c53b4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T20:43:52.418221Z",
-     "start_time": "2022-11-20T20:43:52.411022Z"
+     "end_time": "2022-11-21T21:29:57.688071Z",
+     "start_time": "2022-11-21T21:29:57.683515Z"
     }
    },
    "outputs": [],
@@ -142,8 +142,8 @@
    "id": "ae3b46d0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T20:43:54.618362Z",
-     "start_time": "2022-11-20T20:43:54.614769Z"
+     "end_time": "2022-11-21T21:29:59.619991Z",
+     "start_time": "2022-11-21T21:29:59.617162Z"
     }
    },
    "outputs": [],
@@ -157,8 +157,8 @@
    "id": "c599d8b5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T20:43:55.014005Z",
-     "start_time": "2022-11-20T20:43:55.007246Z"
+     "end_time": "2022-11-21T21:29:59.977513Z",
+     "start_time": "2022-11-21T21:29:59.973586Z"
     }
    },
    "outputs": [
@@ -176,12 +176,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "732073b9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T20:43:56.076259Z",
-     "start_time": "2022-11-20T20:43:56.069935Z"
+     "end_time": "2022-11-21T21:35:01.713751Z",
+     "start_time": "2022-11-21T21:35:01.707631Z"
     }
    },
    "outputs": [],
@@ -189,21 +189,26 @@
     "def my_write(string_text):\n",
     "    now_dt = datetime.datetime.now()\n",
     "    now_str = datetime.date.strftime(now_dt, format='%Y-%m-%d %H:%M:%S')\n",
-    "    new_text = '[' + now_str + ']: ' + string_text\n",
-    "    original_write(new_text)\n",
-    "    return len(new_text)\n",
+    "    if string_text not in [None, '\\n', ' ', '\\t', '']:\n",
+    "        new_text = '[' + now_str + ']: ' + string_text\n",
+    "        original_write(new_text)\n",
+    "        return len(new_text)\n",
+    "    else:\n",
+    "        original_write(string_text)\n",
+    "        return len(string_text)\n",
+    "    \n",
     "\n",
     "sys.stdout.write = my_write"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "f1072486",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T20:43:56.941352Z",
-     "start_time": "2022-11-20T20:43:56.933055Z"
+     "end_time": "2022-11-21T21:35:02.102742Z",
+     "start_time": "2022-11-21T21:35:02.094538Z"
     }
    },
    "outputs": [
@@ -211,7 +216,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-11-20 23:43:56]: 1, 2, 3"
+      "[2022-11-22 00:35:02]: 1, 2, 3"
      ]
     },
     {
@@ -220,7 +225,7 @@
        "30"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,12 +254,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "3a6af333",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T20:43:59.591543Z",
-     "start_time": "2022-11-20T20:43:59.586477Z"
+     "end_time": "2022-11-21T21:35:04.948752Z",
+     "start_time": "2022-11-21T21:35:04.943599Z"
     }
    },
    "outputs": [
@@ -262,7 +267,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-11-20 23:43:59]: 1, 2, 3[2022-11-20 23:43:59]: \n"
+      "[2022-11-22 00:35:04]: 1, 2, 3\n"
      ]
     }
    ],
@@ -271,92 +276,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e7c77f9c",
-   "metadata": {},
-   "source": [
-    "**Задачу считаю выполненной, потому что sys.stdout.write выводит все правильно.**\n",
-    "\n",
-    "**print() выводит лишнюю добавку даты и времени в конце строки, потому что в его имплементации sys.stdout.write вызывается несколько раз: не только для переданного на печать элемента, но и для end и для sep**"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "ebf32949",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-11-20T20:44:08.652394Z",
-     "start_time": "2022-11-20T20:44:08.646514Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2022-11-20 23:44:08]: 1, 2, 3[2022-11-20 23:44:08]: SEP[2022-11-20 23:44:08]: 222[2022-11-20 23:44:08]: END"
-     ]
-    }
-   ],
-   "source": [
-    "print('1, 2, 3', '222', end='END', sep='SEP')"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "3711b8c8",
-   "metadata": {},
-   "source": [
-    "def print_(*args, **kwargs):\n",
-    "    r\"\"\"print(value, ..., sep=' ', end='\\n', file=sys.stdout, flush=False)\n",
-    "\n",
-    "    Prints the values to a stream, or to sys.stdout by default.\n",
-    "    Optional keyword arguments:\n",
-    "    file:  a file-like object (stream); defaults to the current sys.stdout.\n",
-    "    sep:   string inserted between values, default a space.\n",
-    "    end:   string appended after the last value, default a newline.\n",
-    "    flush: whether to forcibly flush the stream.\n",
-    "    \"\"\"\n",
-    "    fp = kwargs.pop(\"file\", None)\n",
-    "    if fp is None:\n",
-    "        fp = sys.stdout\n",
-    "        if fp is None:\n",
-    "            return\n",
-    "    def write(data):\n",
-    "        fp.write(str(data))\n",
-    "    sep = kwargs.pop(\"sep\", None)\n",
-    "    if sep is not None:\n",
-    "        if not isinstance(sep, str):\n",
-    "            raise TypeError(\"sep must be None or a string\")\n",
-    "    end = kwargs.pop(\"end\", None)\n",
-    "    if end is not None:\n",
-    "        if not isinstance(end, str):\n",
-    "            raise TypeError(\"end must be None or a string\")\n",
-    "    flush = kwargs.pop('flush', None)\n",
-    "    if kwargs:\n",
-    "        raise TypeError(\"invalid keyword arguments to print()\")\n",
-    "    if sep is None:\n",
-    "        sep = \" \"\n",
-    "    if end is None:\n",
-    "        end = \"\\n\"\n",
-    "    for i, arg in enumerate(args):\n",
-    "        if i:\n",
-    "            write(sep)\n",
-    "        write(arg)\n",
-    "    write(end)\n",
-    "    if flush:\n",
-    "        fp.flush()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "37617332",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T20:44:11.897323Z",
-     "start_time": "2022-11-20T20:44:11.893334Z"
+     "end_time": "2022-11-21T21:35:14.032045Z",
+     "start_time": "2022-11-21T21:35:14.027494Z"
     }
    },
    "outputs": [],
