fixes after feedback

--- a/AAA._Python._Decorators_MyWork.ipynb
+++ b/AAA._Python._Decorators_MyWork.ipynb
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "id": "2c2dc3b0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-21T21:29:53.654247Z",
-     "start_time": "2022-11-21T21:29:53.634373Z"
+     "end_time": "2022-11-23T06:57:46.587102Z",
+     "start_time": "2022-11-23T06:57:46.578650Z"
     }
    },
    "outputs": [
@@ -34,7 +34,7 @@
        "17"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,6 +42,7 @@
    "source": [
     "import sys\n",
     "import datetime\n",
+    "from functools import wraps\n",
     "\n",
     "sys.stdout.write('Hello, my friend!')"
    ]
@@ -62,8 +63,8 @@
    "id": "0ce62055",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-21T21:29:54.398038Z",
-     "start_time": "2022-11-21T21:29:54.390663Z"
+     "end_time": "2022-11-23T06:45:30.684862Z",
+     "start_time": "2022-11-23T06:45:30.671983Z"
     }
    },
    "outputs": [],
@@ -77,8 +78,8 @@
    "id": "302f574f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-21T21:29:55.057784Z",
-     "start_time": "2022-11-21T21:29:55.049934Z"
+     "end_time": "2022-11-23T06:45:30.945960Z",
+     "start_time": "2022-11-23T06:45:30.937699Z"
     }
    },
    "outputs": [
@@ -103,8 +104,8 @@
    "id": "d08c53b4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-21T21:29:57.688071Z",
-     "start_time": "2022-11-21T21:29:57.683515Z"
+     "end_time": "2022-11-23T06:45:31.321185Z",
+     "start_time": "2022-11-23T06:45:31.317671Z"
     }
    },
    "outputs": [],
@@ -142,8 +143,8 @@
    "id": "ae3b46d0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-21T21:29:59.619991Z",
-     "start_time": "2022-11-21T21:29:59.617162Z"
+     "end_time": "2022-11-23T06:45:42.795021Z",
+     "start_time": "2022-11-23T06:45:42.789802Z"
     }
    },
    "outputs": [],
@@ -157,8 +158,8 @@
    "id": "c599d8b5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-21T21:29:59.977513Z",
-     "start_time": "2022-11-21T21:29:59.973586Z"
+     "end_time": "2022-11-23T06:45:43.143300Z",
+     "start_time": "2022-11-23T06:45:43.133751Z"
     }
    },
    "outputs": [
@@ -176,12 +177,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "732073b9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-21T21:35:01.713751Z",
-     "start_time": "2022-11-21T21:35:01.707631Z"
+     "end_time": "2022-11-23T06:49:32.804061Z",
+     "start_time": "2022-11-23T06:49:32.797686Z"
     }
    },
    "outputs": [],
@@ -190,12 +191,12 @@
     "    now_dt = datetime.datetime.now()\n",
     "    now_str = datetime.date.strftime(now_dt, format='%Y-%m-%d %H:%M:%S')\n",
     "    if string_text not in [None, '\\n', ' ', '\\t', '']:\n",
-    "        new_text = '[' + now_str + ']: ' + string_text\n",
+    "        new_text = f'[{now_str}]: {string_text}'\n",
     "        original_write(new_text)\n",
     "        return len(new_text)\n",
-    "    else:\n",
-    "        original_write(string_text)\n",
-    "        return len(string_text)\n",
+    "\n",
+    "    original_write(string_text)\n",
+    "    return len(string_text)\n",
     "    \n",
     "\n",
     "sys.stdout.write = my_write"
@@ -203,12 +204,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "f1072486",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-21T21:35:02.102742Z",
-     "start_time": "2022-11-21T21:35:02.094538Z"
+     "end_time": "2022-11-23T06:49:33.554102Z",
+     "start_time": "2022-11-23T06:49:33.548689Z"
     }
    },
    "outputs": [
@@ -216,7 +217,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-11-22 00:35:02]: 1, 2, 3"
+      "[2022-11-23 09:49:33]: 1, 2, 3"
      ]
     },
     {
@@ -225,7 +226,7 @@
        "30"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,12 +255,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 25,
    "id": "3a6af333",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-21T21:35:04.948752Z",
-     "start_time": "2022-11-21T21:35:04.943599Z"
+     "end_time": "2022-11-23T06:53:38.298565Z",
+     "start_time": "2022-11-23T06:53:38.291781Z"
     }
    },
    "outputs": [
@@ -267,7 +268,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022-11-22 00:35:04]: 1, 2, 3\n"
+      "1, 2, 3\n"
      ]
     }
    ],
@@ -277,12 +278,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "37617332",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-21T21:35:14.032045Z",
-     "start_time": "2022-11-21T21:35:14.027494Z"
+     "end_time": "2022-11-23T06:53:36.441192Z",
+     "start_time": "2022-11-23T06:53:36.437663Z"
     }
    },
    "outputs": [],
@@ -302,12 +303,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "5804423b",
+   "execution_count": 32,
+   "id": "9c6f4d97",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T20:44:13.429079Z",
-     "start_time": "2022-11-20T20:44:13.422849Z"
+     "end_time": "2022-11-23T06:54:37.999798Z",
+     "start_time": "2022-11-23T06:54:37.995286Z"
     }
    },
    "outputs": [],
@@ -318,18 +319,18 @@
     "        now_str = datetime.date.strftime(now_dt, format='%Y-%m-%d %H:%M:%S')\n",
     "        extra_txt = '[' + now_str + ']: '\n",
     "        new_args = [extra_txt + a for a in args]\n",
-    "        function(*new_args)\n",
+    "        return function(*new_args)\n",
     "    return wrapper"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "f43373a5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T20:44:14.225141Z",
-     "start_time": "2022-11-20T20:44:14.220157Z"
+     "end_time": "2022-11-23T06:54:38.415816Z",
+     "start_time": "2022-11-23T06:54:38.412915Z"
     }
    },
    "outputs": [],
@@ -341,12 +342,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "id": "6a2283db",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T20:44:15.039888Z",
-     "start_time": "2022-11-20T20:44:15.034313Z"
+     "end_time": "2022-11-23T06:54:38.858078Z",
+     "start_time": "2022-11-23T06:54:38.854158Z"
     }
    },
    "outputs": [
@@ -354,7 +355,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, [2022-11-20 23:44:15]: Nikita!\n"
+      "Hello, [2022-11-23 09:54:38]: Nikita!\n"
      ]
     }
    ],
@@ -388,24 +389,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "de733186",
+   "execution_count": 41,
+   "id": "81e1edcc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T20:44:16.617860Z",
-     "start_time": "2022-11-20T20:44:16.611950Z"
+     "end_time": "2022-11-23T06:58:10.540748Z",
+     "start_time": "2022-11-23T06:58:10.533381Z"
     }
    },
    "outputs": [],
    "source": [
     "def redirect_output(filepath):\n",
     "    def decorator(func):\n",
+    "        @wraps(func)\n",
     "        def wrapper(*args):\n",
     "            original_stdout = sys.stdout\n",
-    "            sys.stdout = open(filepath, \"w\")\n",
-    "            func(*args)\n",
-    "            sys.stdout.close()\n",
+    "            with open(filepath, \"w\") as f:\n",
+    "                sys.stdout = f\n",
+    "                ret = func(*args)\n",
     "            sys.stdout = original_stdout\n",
+    "            return ret\n",
     "        return wrapper\n",
     "    return decorator\n",
     "    "
@@ -413,12 +416,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "id": "37e01742",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T20:44:17.063751Z",
-     "start_time": "2022-11-20T20:44:17.058950Z"
+     "end_time": "2022-11-23T06:58:11.377948Z",
+     "start_time": "2022-11-23T06:58:11.372971Z"
     }
    },
    "outputs": [],
@@ -433,12 +436,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "id": "e892f124",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T20:44:17.590198Z",
-     "start_time": "2022-11-20T20:44:17.584704Z"
+     "end_time": "2022-11-23T06:58:12.497506Z",
+     "start_time": "2022-11-23T06:58:12.492647Z"
     }
    },
    "outputs": [],
@@ -448,12 +451,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "id": "ac06c89e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-11-20T20:44:18.701018Z",
-     "start_time": "2022-11-20T20:44:18.547470Z"
+     "end_time": "2022-11-23T06:58:13.264028Z",
+     "start_time": "2022-11-23T06:58:13.120303Z"
     }
    },
    "outputs": [
@@ -470,6 +473,32 @@
    ],
    "source": [
     "%cat function_output.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "fb67ae03",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-11-23T06:58:14.966877Z",
+     "start_time": "2022-11-23T06:58:14.959239Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'calculate'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate.__name__"
    ]
   }
  ],
